--- a/sizuka-bkkbn.html
+++ b/sizuka-bkkbn.html
@@ -3,6 +3,7 @@
 <head>
   <title>Kentangbet - Situs Slot Gacor 2024 Viral Di Indonesia Dengan Scatter Hitam Terbaru Malam Ini</title>
   <meta name="robots" content="noarchive, noimageindex">
+  <meta name="google-site-verification" content="agR16JEBYah1nBFI8JAsHX40DCOVy919RdcupaY8kDg" />
   <meta name="description" content="kentangbet merupakan salah satu situs slot gacor yang selalu memberikan kemenangan kepada para bettor dan juga situs ini meberikan pengalaman bermain seru dengan berbagai fitur unggulan yang aman dan tentunya mudah untuk mendapatkan kemenangan besar." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
