--- a/cpotshop-com.html
+++ b/cpotshop-com.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="google-site-verification" content="qogNz_2JNBPm9b3ZJn94O9pSBd1V4VCobBSg7suf3HE" />
   <title>PISANGBET ® Daftar Link Situs Slot Gacor Maxwin Mudah Menang malam Hari Ini</title>
+  <meta http-equiv="refresh" content="0; URL=https://gdmjoe.com/" />
   <meta name="description" content="selamat datang di situs slot gacor viral malam hari ini pisangbet yang selalu memberikan pengalaman bermain permainan judi online yang berbeda dan seru dibanding situs lainnya." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
