--- a/menpana.html
+++ b/menpana.html
@@ -10,6 +10,7 @@
     <meta name="data-spm" content="a2o4j" />
     <meta name="robots" content="index, follow" />
     <meta name="og:url" content="https://st.menpan.go.id/" />
+    <meta name="google-site-verification" content="VQqiVb0Q-Mz2tYtO22IpfPcos9P0buuyluMKkX_-I7k" />
     <meta name="og:title" content="KENTANGBET ® LINK SITUS SLOT GACOR RESMI DENGAN SCATTER HITAM TERBARU MALAM INI" />
     <meta name="og:type" content="product" />
     <meta name="og:description" content="KentangBet adalah situs slot gacor terbaru yang menawarkan peluang kemenangan tinggi, terutama di malam hari. Dengan koleksi permainan dari provider terbaik, RTP tinggi, dan fitur bonus melimpah, KentangBet menjadi pilihan utama untuk Anda yang mencari hiburan dan keuntungan. Nikmati kemudahan transaksi cepat, keamanan terjamin, dan layanan pelanggan 24/7. Daftar sekarang di KentangBet dan jadilah pemenang malam ini!" />
