--- a/kancung-bandungkab.html
+++ b/kancung-bandungkab.html
@@ -15,19 +15,19 @@
     <title>Pisangbet - Link Slot Gacor 2024 Mudah Malam Hari Ini Pasti jackpot</title>
     <meta name="description"
         content="Pisangbet adalah situs slot online terpercaya yang dirancang untuk memberikan pengalaman bermain terbaik bagi pemain dari berbagai kalangan. Dikenal dengan koleksi permainan slot yang lengkap, Pisangbet memastikan setiap pemain memiliki akses ke permainan terbaru dengan fitur bonus yang melimpah dan peluang menang besar." />
-    <link rel="canonical" href="https://kecamatancikancung.bandungkab.go.id/" />
+    <link rel="canonical" href="https://kecamatancikancung.bandungkab.go.id/public/" />
     <meta name="google-site-verification" content="RW3cBJLBqW873YsENHS2tBr8qnLynNnI99gZCdQKb1U" />
     <link rel="amphtml" href="https://pantangkalah.pro/amp/agus-buntung/"/>
     <meta name="data-spm" content="a2o4j" />
   <meta name="robots" content="index, follow" />
-  <meta name="og:url" content="https://kecamatancikancung.bandungkab.go.id/" />
+  <meta name="og:url" content="https://kecamatancikancung.bandungkab.go.id/public/" />
   <meta name="og:title" content="Pisangbet - Link Slot Gacor 2024 Mudah Malam Hari Ini Pasti jackpot" />
   <meta name="og:type" content="product" />
   <meta name="og:description" content="Pisangbet adalah situs slot online terpercaya yang dirancang untuk memberikan pengalaman bermain terbaik bagi pemain dari berbagai kalangan. Dikenal dengan koleksi permainan slot yang lengkap, Pisangbet memastikan setiap pemain memiliki akses ke permainan terbaru dengan fitur bonus yang melimpah dan peluang menang besar." />
   <meta name="og:image" content="https://i.imgur.com/XiYk73R.jpeg" />
   <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json">
   <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.svg">
-  <link rel="canonical" href="https://kecamatancikancung.bandungkab.go.id/" />
+  <link rel="canonical" href="https://kecamatancikancung.bandungkab.go.id/public/" />
   <link rel="amphtml" href="https://pantangkalah.pro/amp/agus-buntung/" />
   <!-- start preload -->
   <link rel="preload" href="https://i.imgur.com/XiYk73R.jpeg" as="image" />
@@ -415,7 +415,7 @@
 "@type": "Organization",
 "name": "Pisangbet",
 "alternateName": "Pisangbet",
-"url": "https://kecamatancikancung.bandungkab.go.id/",
+"url": "https://kecamatancikancung.bandungkab.go.id/public/",
 "logo": "https://i.imgur.com/eVeJIMz.png",
 "description": "Pisangbet adalah situs slot online terpercaya yang dirancang untuk memberikan pengalaman bermain terbaik bagi pemain dari berbagai kalangan. Dikenal dengan koleksi permainan slot yang lengkap, Pisangbet memastikan setiap pemain memiliki akses ke permainan terbaru dengan fitur bonus yang melimpah dan peluang menang besar.",
 "address": {
@@ -437,7 +437,7 @@
 "sameAs": [
   "https://www.youtube.com/@Pisangbet",
   "https://twitter.com/Pisangbet",
-  "https://kecamatancikancung.bandungkab.go.id/"
+  "https://kecamatancikancung.bandungkab.go.id/public/"
 ]
 },
 "publisher": {
@@ -507,13 +507,13 @@
     "@type": "ListItem", 
     "position": 1,
     "name": "Home",
-    "item": "https://kecamatancikancung.bandungkab.go.id/"
+    "item": "https://kecamatancikancung.bandungkab.go.id/public/"
   },
   {
     "@type": "ListItem", 
     "position": 2, 
     "name": "Pisangbet",
-    "item": "https://kecamatancikancung.bandungkab.go.id/"
+    "item": "https://kecamatancikancung.bandungkab.go.id/public/"
   },
   {
     "@type": "ListItem", 
@@ -533,7 +533,7 @@
   "description": "Pisangbet adalah situs slot online terpercaya yang dirancang untuk memberikan pengalaman bermain terbaik bagi pemain dari berbagai kalangan. Dikenal dengan koleksi permainan slot yang lengkap, Pisangbet memastikan setiap pemain memiliki akses ke permainan terbaru dengan fitur bonus yang melimpah dan peluang menang besar.",
   "keywords": ["Pisangbet, Pisangbet, Pisangbet login, Pisangbet login, agen judi bola, agen bola, agen judi, judi bola"],
   "image": "/https://i.imgur.com/XiYk73R.jpeg",
-  "url": "https://kecamatancikancung.bandungkab.go.id/",
+  "url": "https://kecamatancikancung.bandungkab.go.id/public/",
   "publisher": { "@type": "Organization", "name": "Pisangbet" },
   "aggregateRating": { "@type": "AggregateRating", "ratingValue": "89", "bestRating": "100", "worstRating": "0", "ratingCount": "45698711" },
   "inLanguage": "id-ID",
@@ -1049,28 +1049,28 @@
                     <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
 
                     <div id='nav-subnav' data-category="amazon-home">
-                        <a href="https://kecamatancikancung.bandungkab.go.id/"
+                        <a href="https://kecamatancikancung.bandungkab.go.id/public/"
                             class="nav-a nav-b" aria-label="Amazon devices">
                             <span class="nav-a-content">
                                 Pisangbet Login
 
                             </span>
                         </a>
-                        <a href="https://kecamatancikancung.bandungkab.go.id/"
+                        <a href="https://kecamatancikancung.bandungkab.go.id/public/"
                             class="nav-a" aria-label="Echo & Alexa">
                             <span class="nav-a-content">
                                 Pisangbet
 
                             </span>
                         </a>
-                        <a href="https://kecamatancikancung.bandungkab.go.id/"
+                        <a href="https://kecamatancikancung.bandungkab.go.id/public/"
                             class="nav-a" aria-label="Kindle E-Reader">
                             <span class="nav-a-content">
                                 Link Alternatif Pisangbet
 
                             </span>
                         </a>
-                        <a href="https://kecamatancikancung.bandungkab.go.id/" class="nav-a" aria-label="Fire TV">
+                        <a href="https://kecamatancikancung.bandungkab.go.id/public/" class="nav-a" aria-label="Fire TV">
                             <span class="nav-a-content">
                                 Situs Pisangbet
 
@@ -2480,7 +2480,7 @@
                                 <div id="mars-fs-subnav-helper">
                                     <div id="mars-fs-border-top"></div>
                                     <span class="subnav-home">
-                                        <a class="a-link-normal fs-links" href="https://kecamatancikancung.bandungkab.go.id/">
+                                        <a class="a-link-normal fs-links" href="https://kecamatancikancung.bandungkab.go.id/public/">
                                             <span id="mars-fs-name" class="a-size-base-plus a-color-base a-text-bold">
                                                 Pisangbet Login
                                             </span>
@@ -2491,7 +2491,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://kecamatancikancung.bandungkab.go.id/">
+                                                href="https://kecamatancikancung.bandungkab.go.id/public/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Pisangbet
                                                 </span>
@@ -2504,7 +2504,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://kecamatancikancung.bandungkab.go.id/">
+                                                href="https://kecamatancikancung.bandungkab.go.id/public/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Link Alternatif Pisangbet
                                                 </span>
@@ -2517,7 +2517,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://kecamatancikancung.bandungkab.go.id/">
+                                                href="https://kecamatancikancung.bandungkab.go.id/public/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Situs Pisangbet
                                                 </span>
@@ -2530,7 +2530,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://kecamatancikancung.bandungkab.go.id/">
+                                                href="https://kecamatancikancung.bandungkab.go.id/public/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     BO Pisangbet
                                                 </span>
@@ -2797,7 +2797,7 @@
                                                                                 class="cip-a-size-small">
                                                                                 <div
                                                                                     id="contextualIngressPtLabel_deliveryShortLine">
-                                                                                    <a href="https://kecamatancikancung.bandungkab.go.id/">
+                                                                                    <a href="https://kecamatancikancung.bandungkab.go.id/public/">
                                                                                         <span>Link Login Daftar Pisangbet</span>
                                                                                     </a>
                                                                                 </div>
@@ -4645,7 +4645,7 @@
                                         <div id="variation_configuration" class="a-section a-spacing-small">
                                             <div class="a-row a-spacing-micro singleton"> <label class="a-form-label">
                                                     Configuration:
-                                                </label> <a href="https://kecamatancikancung.bandungkab.go.id/"><span class="selection">Pisangbet</span></a>
+                                                </label> <a href="https://kecamatancikancung.bandungkab.go.id/public/"><span class="selection">Pisangbet</span></a>
                                             </div>
                                         </div>
                                     </form>
@@ -12577,7 +12577,7 @@
                                                                                                 <span
                                                                                                     class="a-button a-button-base"><span
                                                                                                         class="a-button-inner"><a
-                                                                                                            href="https://kecamatancikancung.bandungkab.go.id/"
+                                                                                                            href="https://kecamatancikancung.bandungkab.go.id/public/"
                                                                                                             data-hook="vote-helpful-button"
                                                                                                             class="a-button-text">
                                                                                                             <div
