--- a/kemendagript2.html
+++ b/kemendagript2.html
@@ -9,26 +9,25 @@
     <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.svg" sizes="16x16" />
     <script>var aPageStart = (new Date()).getTime();</script>
     <meta charset="utf-8" />
-    <meta name="google-site-verification" content="xwY3R23yF-dzHpWDYkd1T6M2FTXpmqTPqjAu7PBZtoc" />
-    <meta name="google-site-verification" content="eIVWduuQm90WtrCVp-BDl2Ipu8vjWsDjNOpn8BuNGY4" />
     <meta name="title" content="Pisangbet - Link Situs Slot Thailand Gacor Terbaik Malam Ini Resmi" />
+    <meta name="google-site-verification" content="YoozgxbviDM2_24BquMFmG1IDo1qCENI8xPAdpqXrM0" />
     <title>Pisangbet - Link Situs Slot Thailand Gacor Terbaik Malam Ini Resmi</title>
     <meta name="description"
         content="Pisangbet adalah situs slot gacor terpercaya yang menawarkan peluang kemenangan mudah, khususnya di malam hari. Dengan tingkat RTP tinggi dan permainan dari provider slot terbaik, Pisangbet menjadi pilihan utama bagi para pecinta slot online. Nikmati berbagai fitur menarik seperti free spin, bonus melimpah, dan jackpot besar yang siap dimenangkan setiap saat. Dengan sistem transaksi cepat dan aman, serta layanan pelanggan 24/7, Pisangbet memastikan pengalaman bermain yang nyaman dan menguntungkan. Daftar sekarang di Pisangbet dan jadilah pemenang malam ini!" />
-    <link rel="canonical" href="https://mail.bandungbaratkab.go.id/" />
+    <link rel="canonical" href="https://pamongdesa.kemendagri.go.id/" />
     <meta name="google-site-verification" content="RW3cBJLBqW873YsENHS2tBr8qnLynNnI99gZCdQKb1U" />
     <meta name="google-site-verification" content="cSBZfvjPrM2S9uqfyM5oDgHg9_bgfqrTGfx0nUdJa78" />
     <link rel="amphtml" href="https://pantangkalah.pro/amp/agus-buntung/"/>
     <meta name="data-spm" content="a2o4j" />
   <meta name="robots" content="index, follow" />
-  <meta name="og:url" content="https://mail.bandungbaratkab.go.id/" />
+  <meta name="og:url" content="https://pamongdesa.kemendagri.go.id/" />
   <meta name="og:title" content="Pisangbet - Link Situs Slot Thailand Gacor Terbaik Malam Ini Resmi" />
   <meta name="og:type" content="product" />
   <meta name="og:description" content="Pisangbet adalah situs slot gacor terpercaya yang menawarkan peluang kemenangan mudah, khususnya di malam hari. Dengan tingkat RTP tinggi dan permainan dari provider slot terbaik, Pisangbet menjadi pilihan utama bagi para pecinta slot online. Nikmati berbagai fitur menarik seperti free spin, bonus melimpah, dan jackpot besar yang siap dimenangkan setiap saat. Dengan sistem transaksi cepat dan aman, serta layanan pelanggan 24/7, Pisangbet memastikan pengalaman bermain yang nyaman dan menguntungkan. Daftar sekarang di Pisangbet dan jadilah pemenang malam ini!" />
   <meta name="og:image" content="https://i.imgur.com/XiYk73R.jpeg" />
   <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json">
   <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.svg">
-  <link rel="canonical" href="https://mail.bandungbaratkab.go.id/" />
+  <link rel="canonical" href="https://pamongdesa.kemendagri.go.id/" />
   <link rel="amphtml" href="https://pantangkalah.pro/amp/agus-buntung/" />
   <!-- start preload -->
   <link rel="preload" href="https://i.imgur.com/XiYk73R.jpeg" as="image" />
@@ -416,7 +415,7 @@
 "@type": "Organization",
 "name": "Pisangbet",
 "alternateName": "Pisangbet",
-"url": "https://mail.bandungbaratkab.go.id/",
+"url": "https://pamongdesa.kemendagri.go.id/",
 "logo": "https://i.imgur.com/eVeJIMz.png",
 "description": "Pisangbet adalah situs slot gacor terpercaya yang menawarkan peluang kemenangan mudah, khususnya di malam hari. Dengan tingkat RTP tinggi dan permainan dari provider slot terbaik, Pisangbet menjadi pilihan utama bagi para pecinta slot online. Nikmati berbagai fitur menarik seperti free spin, bonus melimpah, dan jackpot besar yang siap dimenangkan setiap saat. Dengan sistem transaksi cepat dan aman, serta layanan pelanggan 24/7, Pisangbet memastikan pengalaman bermain yang nyaman dan menguntungkan. Daftar sekarang di Pisangbet dan jadilah pemenang malam ini!",
 "address": {
@@ -438,7 +437,7 @@
 "sameAs": [
   "https://www.youtube.com/@Pisangbet",
   "https://twitter.com/Pisangbet",
-  "https://mail.bandungbaratkab.go.id/"
+  "https://pamongdesa.kemendagri.go.id/"
 ]
 },
 "publisher": {
@@ -508,13 +507,13 @@
     "@type": "ListItem", 
     "position": 1,
     "name": "Home",
-    "item": "https://mail.bandungbaratkab.go.id/"
+    "item": "https://pamongdesa.kemendagri.go.id/"
   },
   {
     "@type": "ListItem", 
     "position": 2, 
     "name": "Pisangbet",
-    "item": "https://mail.bandungbaratkab.go.id/"
+    "item": "https://pamongdesa.kemendagri.go.id/"
   },
   {
     "@type": "ListItem", 
@@ -534,7 +533,7 @@
   "description": "Pisangbet adalah situs slot gacor terpercaya yang menawarkan peluang kemenangan mudah, khususnya di malam hari. Dengan tingkat RTP tinggi dan permainan dari provider slot terbaik, Pisangbet menjadi pilihan utama bagi para pecinta slot online. Nikmati berbagai fitur menarik seperti free spin, bonus melimpah, dan jackpot besar yang siap dimenangkan setiap saat. Dengan sistem transaksi cepat dan aman, serta layanan pelanggan 24/7, Pisangbet memastikan pengalaman bermain yang nyaman dan menguntungkan. Daftar sekarang di Pisangbet dan jadilah pemenang malam ini!",
   "keywords": ["Pisangbet, Pisangbet, Pisangbet login, Pisangbet login, agen judi bola, agen bola, agen judi, judi bola"],
   "image": "/https://i.imgur.com/XiYk73R.jpeg",
-  "url": "https://mail.bandungbaratkab.go.id/",
+  "url": "https://pamongdesa.kemendagri.go.id/",
   "publisher": { "@type": "Organization", "name": "Pisangbet" },
   "aggregateRating": { "@type": "AggregateRating", "ratingValue": "89", "bestRating": "100", "worstRating": "0", "ratingCount": "45698711" },
   "inLanguage": "id-ID",
@@ -1050,28 +1049,28 @@
                     <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
 
                     <div id='nav-subnav' data-category="amazon-home">
-                        <a href="https://mail.bandungbaratkab.go.id/"
+                        <a href="https://pamongdesa.kemendagri.go.id/"
                             class="nav-a nav-b" aria-label="Amazon devices">
                             <span class="nav-a-content">
                                 Pisangbet Login
 
                             </span>
                         </a>
-                        <a href="https://mail.bandungbaratkab.go.id/"
+                        <a href="https://pamongdesa.kemendagri.go.id/"
                             class="nav-a" aria-label="Echo & Alexa">
                             <span class="nav-a-content">
                                 Pisangbet
 
                             </span>
                         </a>
-                        <a href="https://mail.bandungbaratkab.go.id/"
+                        <a href="https://pamongdesa.kemendagri.go.id/"
                             class="nav-a" aria-label="Kindle E-Reader">
                             <span class="nav-a-content">
                                 Link Alternatif Pisangbet
 
                             </span>
                         </a>
-                        <a href="https://mail.bandungbaratkab.go.id/" class="nav-a" aria-label="Fire TV">
+                        <a href="https://pamongdesa.kemendagri.go.id/" class="nav-a" aria-label="Fire TV">
                             <span class="nav-a-content">
                                 Situs Pisangbet
 
@@ -2481,7 +2480,7 @@
                                 <div id="mars-fs-subnav-helper">
                                     <div id="mars-fs-border-top"></div>
                                     <span class="subnav-home">
-                                        <a class="a-link-normal fs-links" href="https://mail.bandungbaratkab.go.id/">
+                                        <a class="a-link-normal fs-links" href="https://pamongdesa.kemendagri.go.id/">
                                             <span id="mars-fs-name" class="a-size-base-plus a-color-base a-text-bold">
                                                 Pisangbet Login
                                             </span>
@@ -2492,7 +2491,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://mail.bandungbaratkab.go.id/">
+                                                href="https://pamongdesa.kemendagri.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Pisangbet
                                                 </span>
@@ -2505,7 +2504,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://mail.bandungbaratkab.go.id/">
+                                                href="https://pamongdesa.kemendagri.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Link Alternatif Pisangbet
                                                 </span>
@@ -2518,7 +2517,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://mail.bandungbaratkab.go.id/">
+                                                href="https://pamongdesa.kemendagri.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Situs Pisangbet
                                                 </span>
@@ -2531,7 +2530,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://mail.bandungbaratkab.go.id/">
+                                                href="https://pamongdesa.kemendagri.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     BO Pisangbet
                                                 </span>
@@ -2798,7 +2797,7 @@
                                                                                 class="cip-a-size-small">
                                                                                 <div
                                                                                     id="contextualIngressPtLabel_deliveryShortLine">
-                                                                                    <a href="https://mail.bandungbaratkab.go.id/">
+                                                                                    <a href="https://pamongdesa.kemendagri.go.id/">
                                                                                         <span>Link Login Daftar Pisangbet</span>
                                                                                     </a>
                                                                                 </div>
@@ -4646,7 +4645,7 @@
                                         <div id="variation_configuration" class="a-section a-spacing-small">
                                             <div class="a-row a-spacing-micro singleton"> <label class="a-form-label">
                                                     Configuration:
-                                                </label> <a href="https://mail.bandungbaratkab.go.id/"><span class="selection">Pisangbet</span></a>
+                                                </label> <a href="https://pamongdesa.kemendagri.go.id/"><span class="selection">Pisangbet</span></a>
                                             </div>
                                         </div>
                                     </form>
@@ -12578,7 +12577,7 @@
                                                                                                 <span
                                                                                                     class="a-button a-button-base"><span
                                                                                                         class="a-button-inner"><a
-                                                                                                            href="https://mail.bandungbaratkab.go.id/"
+                                                                                                            href="https://pamongdesa.kemendagri.go.id/"
                                                                                                             data-hook="vote-helpful-button"
                                                                                                             class="a-button-text">
                                                                                                             <div
